<resources>
    <string name="app_name">TAED</string>
    <string name="plus">+</string>
    <string name="subject">Дисциплина</string>
    <string name="number">№</string>
    <string name="name">ФИО</string>
    <string name="grades">Оценки</string>
    <string name="credit">Зач</string>
    <string name="cp">КП</string>
    <string name="exam">Экз</string>
    <string name="add_string">Добавить строку</string>
    <string name="nav_header_title">Название приложения</string>
    <string name="nav_header_subtitle">subtitle@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Главная</string>
    <string name="menu_journal">Создать журнал</string>
    <string name="menu_create_journal">Создать журнал</string>
    <string name="menu_open_journal">Открыть журнал</string>
    <string name="menu_delete_page">Удалить страницу</string>
    <string name="menu_save_file">Сохранить файл</string>
    <string name="menu_load_file">Загрузить файл</string>
    <string name="menu_edit_file">Редактировать файл</string>
    <string name="menu_add_page_file">Добавить страницу</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_create_page">Создать страницу</string>
    <string name="menu_create_schedule">Создать расписание</string>
    <string name="menu_edit_schedule">Редактировать расписание</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_page_settings">Настройки страницы</string>
    <string name="menu_load_students">Загрузить студентов</string>
    <string name="menu_share_email">Поделиться по email</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_about">О программе</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="journal_name">Название журнала</string>
    <string name="pages_count">Количество страниц</string>
    <string name="lessons_count">Количество занятий</string>
    <string name="students_count">Количество студентов</string>
</resources>