<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_journal">
        <item
            android:id="@+id/action_journal"
            android:title="@string/menu_journal"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_create_journal"
            android:title="@string/menu_create_journal"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_open_journal"
            android:title="@string/menu_open_journal"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_delete_page"
            android:title="@string/menu_delete_page"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/group_file">
        <item
            android:id="@+id/action_save_file"
            android:title="@string/menu_save_file"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_load_file"
            android:title="@string/menu_load_file"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_edit_file"
            android:title="@string/menu_edit_file"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_add_page_file"
            android:title="@string/menu_add_page_file"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/group_edit">
        <item
            android:id="@+id/action_edit"
            android:title="@string/menu_edit"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_create_page"
            android:title="@string/menu_create_page"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_create_schedule"
            android:title="@string/menu_create_schedule"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_edit_schedule"
            android:title="@string/menu_edit_schedule"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/action_settings"
            android:title="@string/menu_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_journal_page_settings"
            android:title="@string/menu_page_settings"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_load_students"
            android:title="@string/menu_load_students"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/group_share">
        <item
            android:id="@+id/action_share_email"
            android:title="@string/menu_share_email"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/group_misc">
        <item
            android:id="@+id/action_search"
            android:title="@string/menu_search"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_about"
            android:title="@string/menu_about"
            app:showAsAction="never" />
    </group>

</menu>