<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/journalNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/journal_name"
        android:inputType="text"
        android:padding="8dp" />

    <EditText
        android:id="@+id/pageCountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pages_count"
        android:inputType="number"
        android:padding="8dp" />

    <EditText
        android:id="@+id/gradeCountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lessons_count"
        android:inputType="number"
        android:padding="8dp" />

    <EditText
        android:id="@+id/studentCountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/students_count"
        android:inputType="number"
        android:padding="8dp" />

    <Button
        android:id="@+id/createJournalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_create_journal"
        android:background="#00B7EB"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp" />

</LinearLayout>