<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:tabMode="scrollable"
            app:tabGravity="fill" />

        <Button
            android:id="@+id/addTabButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:textSize="20sp"
            android:padding="8dp" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/disciplineEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/subject"
            android:textColor="#000000"
            android:padding="8dp"
            android:singleLine="true"
            tools:ignore="Autofill,LabelFor,TextFields" />
    </HorizontalScrollView>

    <!-- Заголовки -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:stretchColumns="*">
            <TableRow tools:ignore="UselessParent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number"
                    android:textColor="#000000"
                    android:padding="8dp"
                    android:background="#E0F7FA" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="#000000"
                    android:padding="8dp"
                    android:background="#FFFFFF" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout4Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:stretchColumns="*">
            <TableRow tools:ignore="UselessParent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grades"
                    android:textColor="#000000"
                    android:padding="8dp"
                    android:background="#E0F7FA" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout5Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:stretchColumns="*">
            <TableRow tools:ignore="UselessParent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit"
                    android:textColor="#000000"
                    android:padding="8dp"
                    android:background="#E0F7FA" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp"
                    android:textColor="#000000"
                    android:padding="8dp"
                    android:background="#FFFFFF" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exam"
                    android:textColor="#000000"
                    android:padding="8dp"
                    android:background="#E0F7FA" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#00B7EB" />

    <!-- Данные -->
    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableLayout
                    android:id="@+id/tableLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*">
                </TableLayout>
            </HorizontalScrollView>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#00B7EB" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableLayout
                    android:id="@+id/tableLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*">
                </TableLayout>
            </HorizontalScrollView>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#00B7EB" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableLayout
                    android:id="@+id/tableLayout5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="*">
                </TableLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/addRowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_string"
        android:background="#00B7EB"
        android:textColor="#FFFFFF" />

</LinearLayout>